--- a/convertedClient/src/contact.html
+++ b/convertedClient/src/contact.html
@@ -160,17 +160,48 @@
                     </div>
                 </div>
 
+                <div>
+                    <div>
+                        <h2>Friend List:</h2>
+                    </div>
+                    <div id="friend-list">
+                    </div>
+                </div>
+
 
             </div>
         </div>
     </div>
     </div>
-    <script type="module" src="../script/timeline.js"></script>
-    <script>
-        showUsername();
-    </script>
-    <script src="../script/get-follower.js"></script> <!-- existe pas => todo -->
-    <script src="../script/get-followee.js"></script> <!-- existe pas => todo -->
+
+    <!-- Templates for dynamic content -->
+    <template id="follower-template">
+        <div class="follower-div card gedf-card"
+            style="margin-bottom: 10px; border: 1px solid #ccc; background-color: #f8f9fa; border-radius: 5px;">
+            <div class="card-body" style="padding: 15px;">
+                <div class="h5 m-0 follower-id" style="color: #333; font-weight: bold;">Follower ID</div>
+            </div>
+        </div>
+    </template>
+
+    <template id="followee-template">
+        <div class="followee-div card gedf-card"
+            style="margin-bottom: 10px; border: 1px solid #ccc; background-color: #f8f9fa; border-radius: 5px;">
+            <div class="card-body" style="padding: 15px;">
+                <div class="h5 m-0 followee-id" style="color: #333; font-weight: bold;">Followee ID</div>
+            </div>
+        </div>
+    </template>
+
+    <template id="friend-template">
+        <div class="friend-div card gedf-card"
+            style="margin-bottom: 10px; border: 1px solid #ccc; background-color: #e0f7fa; border-radius: 5px;">
+            <div class="card-body" style="padding: 15px;">
+                <div class="h5 m-0 friend-id" style="color: #006064; font-weight: bold;">Friend ID</div>
+            </div>
+        </div>
+    </template>
+
     <script type="module" src="../script/contact-js.js"></script>
     <script type="text/javascript" src="./javascript/button-click.js"></script> <!-- existe pas => todo -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
