Friends list c++ changes (refacto fonctions)

--- a/convertedClient/src/contact.html
+++ b/convertedClient/src/contact.html
@@ -80,7 +80,7 @@
             <div class="col-md-9 gedf-main">
 
                 <div>
-                    <h2>Add New Followee</h2>
+                    <h2>Follow a user</h2>
                 </div>
 
                 <div class="row">
@@ -88,7 +88,7 @@
                         <form class="follow-form">
                             <div class="form-group mb-3">
                                 <input type="text" class="form-control mb-2" id="followee-name" name="followee_name"
-                                    placeholder="type a user name to follow">
+                                    placeholder="type a user name or ID to follow">
                                 <input type="text" class="hide follow-username" id="user-name" name="user_name">
                                 <input type="submit" class="btn btn-md btn-primary" name="follow_type" value="Follow">
                             </div>
@@ -97,7 +97,7 @@
                 </div>
 
                 <div>
-                    <h2>Unfollow A Followee</h2>
+                    <h2>Unfollow a user</h2>
                 </div>
 
                 <div class="row">
@@ -105,7 +105,7 @@
                         <form class="follow-form">
                             <div class="form-group mb-3">
                                 <input type="text" class="form-control mb-2" id="followee-name" name="followee_name"
-                                    placeholder="type a user name to unfollow">
+                                    placeholder="type a user name or ID to unfollow">
                                 <input type="text" class="hide follow-username" name="user_name">
                                 <input type="submit" class="btn btn-md btn-primary" name="follow_type" value="Unfollow">
                             </div>
