add annuaire service

--- a/convertedClient/src/main.html
+++ b/convertedClient/src/main.html
@@ -224,6 +224,20 @@
 
                 <div class="row mt-3 frequent">
                     <div class="col-sm-12">
+                      <h5 class="text-center">Logged Users</h5>
+                      <div class="card mb-1">
+                        <div class="card-body">
+                          <div class="row no-gutters">
+                            <div class="col-md-9" id="annuaire-block">
+                                <div id="logged-user-template" class="logged-user d-none">
+                                  <span class="username-span"></span>
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-12">
                         <h5 class="text-center">Frequent Contacts</h5>
                         <div class="card mb-1">
                             <div class="card-body">
