--- a/convertedClient/src/main.html
+++ b/convertedClient/src/main.html
@@ -229,8 +229,11 @@
                         <div class="card-body">
                           <div class="row no-gutters">
                             <div class="col-md-9" id="annuaire-block">
-                                <div id="logged-user-template" class="logged-user d-none">
-                                  <span class="username-span"></span>
+                                <div id="logged-user-template" class="logged-user">
+                                <span class="username-span"></span>
+                                  <button class="btn btn-md btn-primary log-user-btn" >
+                                      Follow
+                                  </button>
                                 </div>
                             </div>
                           </div>
