--- a/convertedClient/src/main.html
+++ b/convertedClient/src/main.html
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                 </div>
-
+                <button id="synchro">Synchro</button>
                 <!-- Post Section Start -->
                 <div class="d-flex justify-content-end mb-2" style="padding-right: 15px;">
                     <div class="form-check">
