--- a/convertedClient/src/main.html
+++ b/convertedClient/src/main.html
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                 </div>
-                <button id="synchro">Synchro</button>
+                <button id="synchro">Get Posts</button>
                 <!-- Post Section Start -->
                 <div class="d-flex justify-content-end mb-2" style="padding-right: 15px;">
                     <div class="form-check">
@@ -157,70 +157,8 @@
                 </div>
             </div>
 
-            <!-- Recommendation Section -->
             <div class="col-sm-3">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h5 class="text-center">Recommendation</h5>
-                        <div class="card mb-1">
-                            <div class="card-body">
-                                <div class="row no-gutters">
-                                    <div class="col-md-8">
-                                        <a class="card-title" href="./profile.html?username=mark">
-                                            <h5>Mark Zuckerberg</h5>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4 follow">
-                                        <form class="follow-form">
-                                            <input type="hidden" class="form-control mb-2" name="followee_name"
-                                                value="mark" />
-                                            <input type="hidden" class="follow-username" name="user_name" />
-                                            <input type="submit" class="btn btn-md btn-primary" value="Follow" />
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card mb-1">
-                            <div class="card-body">
-                                <div class="row no-gutters">
-                                    <div class="col-md-8">
-                                        <a class="card-title" href="./profile.html?username=elon">
-                                            <h5>Elon Musk</h5>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4 follow">
-                                        <form class="follow-form">
-                                            <input type="hidden" class="form-control mb-2" name="followee_name"
-                                                value="elon" />
-                                            <input type="hidden" class="follow-username" name="user_name" />
-                                            <input type="submit" class="btn btn-md btn-primary" value="Follow" />
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card mb-1">
-                            <div class="card-body">
-                                <div class="row no-gutters">
-                                    <div class="col-md-8">
-                                        <a class="card-title" href="./profile.html?username=bill">
-                                            <h5>Bill Gates</h5>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4 follow">
-                                        <form class="follow-form">
-                                            <input type="hidden" class="form-control mb-2" name="followee_name"
-                                                value="bill" />
-                                            <input type="hidden" class="follow-username" name="user_name" />
-                                            <input type="submit" class="btn btn-md btn-primary" value="Follow" />
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
 
                 <div class="row mt-3 frequent">
                     <div class="col-sm-12">
@@ -239,54 +177,6 @@
                           </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="col-sm-12">
-                        <h5 class="text-center">Frequent Contacts</h5>
-                        <div class="card mb-1">
-                            <div class="card-body">
-                                <div class="row no-gutters">
-                                    <div class="col-md-3">
-                                        <img class="rounded-circle" width="45" src="https://picsum.photos/50/50"
-                                            alt="" />
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-title">
-                                            <a href="#" class="h5">Betty Copper</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card mb-1">
-                            <div class="card-body">
-                                <div class="row no-gutters">
-                                    <div class="col-md-3">
-                                        <img class="rounded-circle" width="45" src="https://picsum.photos/50/50"
-                                            alt="" />
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-title">
-                                            <a href="#" class="h5">Jack Ma</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card mb-1">
-                            <div class="card-body">
-                                <div class="row no-gutters">
-                                    <div class="col-md-3">
-                                        <img class="rounded-circle" width="45" src="https://picsum.photos/50/50"
-                                            alt="" />
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-title">
-                                            <a href="#" class="h5">Bob Dylan</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
