fix for deployment and conf update

--- a/convertedClient/index.html
+++ b/convertedClient/index.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="mt-4">
                         <div class="d-flex justify-content-center links">
-                            <a href="src/signup.html">Sign Up</a>
+                            <a href="signup.html">Sign Up</a>
                         </div>
                     </div>
                 </div>
