--- a/convertedClient/signup.html
+++ b/convertedClient/signup.html
@@ -23,7 +23,7 @@
             href="https://fonts.font.im/css?family=Kaushan+Script"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="../style/signup.css" />
+        <link rel="stylesheet" href="style/signup.css" />
     </head>
     <!--Coded with love by Mutiullah Samim-->
 
@@ -126,4 +126,4 @@
     </body>
 </html>
 
-<script type="module" src="../script/signup-js.js"></script>
+<script type="module" src="script/signup-js.js"></script>
