--- a/convertedClient/contact.html
+++ b/convertedClient/contact.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../style/main.css" />
+    <link rel="stylesheet" href="style/main.css" />
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 </head>
@@ -165,13 +165,13 @@
         </div>
     </div>
     </div>
-    <script type="module" src="../script/timeline.js"></script>
+    <script type="module" src="script/timeline.js"></script>
     <script>
         showUsername();
     </script>
-    <script src="../script/get-follower.js"></script> <!-- existe pas => todo -->
-    <script src="../script/get-followee.js"></script> <!-- existe pas => todo -->
-    <script type="module" src="../script/contact-js.js"></script>
+    <script src="script/get-follower.js"></script> <!-- existe pas => todo -->
+    <script src="script/get-followee.js"></script> <!-- existe pas => todo -->
+    <script type="module" src="script/contact-js.js"></script>
     <script type="text/javascript" src="./javascript/button-click.js"></script> <!-- existe pas => todo -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
