--- a/convertedClient/main.html
+++ b/convertedClient/main.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" />
-    <link rel="stylesheet" href="../style/main.css" />
+    <link rel="stylesheet" href="style/main.css" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
@@ -185,9 +185,9 @@
 
     <!-- Create and hide Post JavaScript -->
 
-    <script type="module" src="../script/create-post.js"></script>
-    <script type="module" src="../script/timeline.js"></script>
-    <script type="module" src="../script/contact-js.js"></script>
+    <script type="module" src="script/create-post.js"></script>
+    <script type="module" src="script/timeline.js"></script>
+    <script type="module" src="script/contact-js.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -251,4 +251,4 @@
     </body>
 </html>
 
-<script type="module" src="../script/main-js.js"></script>
+<script type="module" src="script/main-js.js"></script>
