Fix clearDatabase, Vite build paths, and Ansible deployment

--- a/convertedClient/main.html
+++ b/convertedClient/main.html
@@ -104,8 +104,8 @@
                     </div>
                 </div>
                 <!-- New Posts Notification -->
-                <div id="new-posts-alert" class="alert alert-info text-center cursor-pointer" style="display: none; cursor: pointer;">
-                    🔔 <span id="new-posts-count">0</span> New Posts. Click to Refresh.
+                <div id="new-posts-alert" style="display: none; cursor: pointer;">
+                    <span id="new-posts-message"></span>
                 </div>
 
                 <!-- Post Section Start -->
@@ -184,11 +184,11 @@
 
     <!-- Create and hide Post JavaScript -->
 
-    <script type="module" src="../script/create-post.js"></script>
-    <script type="module" src="../script/timeline.js"></script>
-    <script type="module" src="../script/contact-js.js"></script>
-    <script type="module" src="../script/benchmark.js"></script>
-    <script src="../script/benchmark-ui.js"></script>
+    <script type="module" src="./script/create-post.js"></script>
+    <script type="module" src="./script/timeline.js"></script>
+    <script type="module" src="./script/contact-js.js"></script>
+    <script type="module" src="./script/benchmark.js"></script>
+    <script type="module" src="./script/benchmark-ui.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
