Fix final relative script path in main.html and clean up Ansible

--- a/convertedClient/main.html
+++ b/convertedClient/main.html
@@ -240,6 +240,6 @@
     </div>
 
     <!-- Main Logic -->
-    <script type="module" src="../script/main-js.js"></script>
+    <script type="module" src="./script/main-js.js"></script>
 </body>
 </html>
