--- a/convertedClient/main.html
+++ b/convertedClient/main.html
@@ -172,6 +172,9 @@
                                   <button class="btn btn-md btn-primary log-user-btn" >
                                       Follow
                                   </button>
+                                  <button class="btn btn-md btn-primary synchronize-db-user-btn" >
+                                      Synchronize db
+                                  </button>
                                 </div>
                             </div>
                           </div>
