--- a/convertedClient/profile.html
+++ b/convertedClient/profile.html
@@ -363,7 +363,7 @@
         <script type="module" src="script/create-post.js"></script>
         <script type="module" src="script/timeline.js"></script>
         <script type="module">
-            import showTimeline from "./script/utils.js";
+            import { showTimeline } from "./script/utils.js";
 
             if (
                 window.location.href.split("=")[1] == null ||
